@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>maven-parent-pom</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>8.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -24,13 +24,14 @@
 
 
         <!-- Java API versions targeted -->
-        <java.se.version>8</java.se.version>
+        <java.se.version>11</java.se.version>
         <java.ee.version>7</java.ee.version>
         <javaee-api.version>7.0</javaee-api.version>
 
         <!-- Compilation properties -->
-        <compiler.source>1.8</compiler.source>
-        <compiler.target>1.8</compiler.target>
+        <compiler.release>11</compiler.release>
+        <compiler.source>11</compiler.source>
+        <compiler.target>11</compiler.target>
         <compiler.debug>true</compiler.debug>
         <compiler.debuglevel>lines,vars,source</compiler.debuglevel>
         <compiler.showdeprecation>true</compiler.showdeprecation>
@@ -44,7 +45,7 @@
 
         <plugins.maven.assembly.version>3.0.0</plugins.maven.assembly.version>
         <plugins.maven.clean.version>3.0.0</plugins.maven.clean.version>
-        <plugins.maven.compiler.version>3.6.1</plugins.maven.compiler.version>
+        <plugins.maven.compiler.version>3.8.0</plugins.maven.compiler.version>
         <plugins.maven.dependency.version>3.0.1</plugins.maven.dependency.version>
         <plugins.maven.deploy.version>2.8.2</plugins.maven.deploy.version>
         <plugins.maven.install.version>2.5.2</plugins.maven.install.version>
@@ -53,11 +54,11 @@
         <plugins.maven.site.version>3.6</plugins.maven.site.version>
         <plugins.maven.javadoc.version>2.10.4</plugins.maven.javadoc.version>
         <plugins.maven.source.version>3.0.1</plugins.maven.source.version>
-        <plugins.maven-plugin-plugin.version>3.5</plugins.maven-plugin-plugin.version>
+        <plugins.maven-plugin-plugin.version>3.6.0</plugins.maven-plugin-plugin.version>
 
         <plugins.maven.wagon.version>2.10</plugins.maven.wagon.version>
         <plugins.maven.war.version>3.1.0</plugins.maven.war.version>
-        <plugins.versions.version>2.2</plugins.versions.version>
+        <plugins.versions.version>2.5</plugins.versions.version>
         <plugins.maven.shade.version>3.0.0</plugins.maven.shade.version>
 
         <plugins.buildnumber.version>1.4</plugins.buildnumber.version>
@@ -65,8 +66,8 @@
         <plugins.coveralls.version>4.3.0</plugins.coveralls.version>
 
         <!-- testing -->
-        <plugins.maven.surefire.version>2.20</plugins.maven.surefire.version>
-        <plugins.maven.failsafe.version>${plugins.maven.surefire.version}</plugins.maven.failsafe.version>
+        <plugins.maven.surefire.version>2.22.2</plugins.maven.surefire.version>
+        <plugins.maven.failsafe.version>2.22.2</plugins.maven.failsafe.version>
         <plugins.maven.processor.version>3.3.1</plugins.maven.processor.version>
         <plugins.pitest.version>1.2.4</plugins.pitest.version>
         <pitest.enabled>false</pitest.enabled>
@@ -78,7 +79,7 @@
         </javadoc.javaee.link>
         <javadoc.javamail.link>http://javamail.kenai.com/nonav/javadocs/</javadoc.javamail.link>
 
-        <plugins.jacoco.version>0.7.9</plugins.jacoco.version>
+        <plugins.jacoco.version>0.8.4</plugins.jacoco.version>
 
         <h2.version>1.4.196</h2.version>
         <hibernate.version>4.3.11.Final</hibernate.version>
@@ -120,6 +121,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${plugins.maven.surefire.version}</version>
+                <configuration>
+                    <argLine>--illegal-access=permit</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </reporting>
@@ -167,6 +171,7 @@
                     <version>${plugins.maven.surefire.version}</version>
                     <configuration>
                         <useSystemClassLoader>false</useSystemClassLoader>
+                        <argLine>--illegal-access=permit</argLine>
                     </configuration>
                 </plugin>
 
@@ -174,6 +179,14 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-report-plugin</artifactId>
                     <version>${plugins.maven.surefire.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>${plugins.versions.version}</version>
+                    <configuration>
+                        <generateBackupPoms>false</generateBackupPoms>
+                    </configuration>
                 </plugin>
 
                 <plugin>
@@ -209,6 +222,7 @@
                     <version>${plugins.maven.compiler.version}</version>
                     <!-- Configuration reference - http://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html -->
                     <configuration>
+                        <release>${compiler.release}</release>
                         <source>${compiler.source}</source>
                         <target>${compiler.target}</target>
                         <debug>${compiler.debug}</debug>
